public/stylesheets/style.css
body {
  padding: 50px;
  font: 14px "Barlow-Regular", "Lucida Grande", Helvetica, Arial, sans-serif;
  height: 100vh;
  width: 100vw;
  box-sizing: border-box;
  margin: 0;
}

form#quotes-form {
    display: flex;
    flex-direction: column;
    max-width: 500px;
    justify-content: center;
    position: relative;
}

form#quotes-form * {
    margin-bottom: 10px;
}
textarea#quote-input,
input#author-input {
    font-size: 20px;
    resize: none;
}

button#quote-submit {
    font-size: 20px;
    padding: 10px;
}

div.submit-response {
    position: absolute;
    bottom: -40px;
    left: 0;
    right: 0;
    margin: auto;
    max-width: 400px;
    text-align: center;
    font-weight: bold;
    letter-spacing: 1px;
    border: 1px solid;
    border-radius: 5px;
    padding: 5px;
    transition: 0.3s;
}

div#submit-success {
    color: rgb(2, 87, 2);
    border-color: rgb(2, 87, 2);;
}

div#submit-failure {
    color: rgb(219, 55, 26);
    border-color: rgb(219, 55, 26);
}

div#container:fullscreen {
    position: relative;
    width: 100%;
    height: 100%;
}

video#video-display,
div#quotes-display {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
}

div#container:not(:fullscreen) #quotes-display,
div#container:not(:fullscreen) #video-display {
    display: none;
}

div#container:fullscreen #quotes-display {
    background-color: #ffc843;
    transition: .5s background-color;
    top: 0;
}

div#quotes-display.dark-mode {
    background-color: black;
}

video#video-display.hidden {
    transition: 0.5s;
}

.single-quote {
    /* height: 200px;
    width: 200px; */
    position: absolute;
    /* border: 2px solid black; */
    transition: 0.6s opacity;

    font-family: 'Barlow-Regular', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

#main-quote {
    /* background-color: rgb(130, 130, 235); */
    font-size: 60px;
    font-family: 'Barlow-ExtraBold' !important;
    max-width: 50vw;
}

div.secondary-quote {
    font-size: 20px;
    opacity: 0.3;
    font-family: 'Barlow-Light';
    max-width: 25vw;
}

div.quote-text {
    text-align: center;
    transition: .5s color;
}

div#quotes-display.dark-mode div.quote-text{
    color:#ffc843;
}

div.author-text {
    text-align: right;
    font-size: 0.625em;
    transition: .5s color;
}

div#quotes-display.dark-mode div.author-text{
    color: white;
}

/* #a {
    background-color: rgb(154, 230, 154);
}

#b {
    background-color: rgb(248, 72, 239);
}

#c {
    background-color: rgb(12, 236, 12);
}

#d {
    background-color: rgb(253, 123, 123);
}

#e {
    background-color: rgb(201, 123, 253);
}

#f {
    background-color: rgb(123, 253, 214);
} */

div#quotes-list-container {
    margin-top: 40px;
    display: flex;
    flex-direction: column-reverse;
    justify-content: center;
}

div.quote-li {
    
    margin-bottom: 10px;
    background-color: rgb(203, 238, 250);
    border-radius: 5px;
    padding: 6px;
    max-width: 500px;
}

button.quote-li-delete {
    font-size: 16px;
    padding: 4px;
}

div.quote-li * {
    margin-bottom: 10px;
}

.hidden {
    opacity: 0 !important;
}

.removed {
    display: none !important;
}

